# FoF-editor

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  NewEditor.sln  NewEditor.vcxproj  NewEditor.vcxproj.filters  README.md  configure  configure.bat  settings.ini
docs/: Generation.txt  TODO.txt
src/: AboutDialog.cpp  AboutDialog.h  AdvancedAttributesDialog.cpp  AdvancedAttributesDialog.h  AdvancedAttributesManager.cpp  AdvancedAttributesManager.h  AutoBackupDialog.cpp  AutoBackupDialog.h  Config.cpp  Config.h  DatSprOpenDialog.cpp  DatSprOpenDialog.h  DatSprOpenSaveDialog.cpp  DatSprOpenSaveDialog.h  DatSprReaderWriter.cpp  DatSprReaderWriter.h  DatSprStructs.h  Events.cpp  Events.h  ExportAnimationDialog.cpp  ExportAnimationDialog.h  FindObjectDialog.cpp  FindObjectDialog.h  GenerateRMEDialog.cpp  GenerateRMEDialog.h  Interfaces.h  ItemsOtbWriter.cpp  ItemsOtbWriter.h  MainWindow.cpp  MainWindow.h  NewEditor.cpp  NewEditor.h  PreferencesDialog.cpp  PreferencesDialog.h  QuickGuideDialog.cpp  QuickGuideDialog.h  Settings.cpp  Settings.h  SpritesCleanupDialog.cpp  SpritesCleanupDialog.h  (+4 more)
